feat(t1 referrals sharing): users can now choose to redirect any new users that input their username as the referral, to a different user that has lower verified referral count
