# cmd/eskimo/api/swagger.json
@@ -760,6 +760,10 @@
                     "type": "integer",
                     "example": 100
                 },
+                "t1ReferralsSharingEnabled": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "t2ReferralCount": {
                     "type": "integer",
                     "example": 100
@@ -1121,6 +1125,10 @@
                 "t1ReferralCount": {
                     "type": "integer",
                     "example": 100
+                },
+                "t1ReferralsSharingEnabled": {
+                    "type": "boolean",
+                    "example": true
                 },
                 "t2ReferralCount": {
                     "type": "integer",
